--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Jekyll on Render
-email: support@render.com
+title: the gospel according to jden
+email: iam@jden.me
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  the gospel according to jden
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jekyll.onrender.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: getrender
-github_username:  render
+url: "https://blog.jden.me" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jden
+github_username:  JDENredden
 permalink: /:categories/:year/:month/:day/:title
 
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
+plugins:  
   - jekyll-feed
 
 # Exclude from processing.
