--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ markdown: kramdown
 # theme: minima
 plugins:  
   - jekyll-feed
-  - jeykll-paginate
+  - jeykll-paginate-v2
   - jeykll-gist
 
 # Assets
