--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: the gospel according to jden
-tagline: jden
+tagline: blog
 email: iam@jden.me
 description: >- # this means to ignore newlines until "baseurl:"
   the gospel according to jden
@@ -34,7 +34,7 @@ plugins:
 
 pagination: 
     enabled: true
-    per_page: 1
+    per_page: 10
     sort_reverse: true
 
 # Assets
