--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ pagination:
     sort_reverse: true
     
 jekyll-archives:
-  enabled: []
+  enabled: all
   layout: archive
   permalinks:
     year: '/:year/'
