--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ jekyll-archives:
     month: '/blog/:year/:month/'
     day: '/blog/:year/:month/:day/'
     tag: '/blog/tag/:name/'
-    category: '/blog/category/:name/'
+    category: '/blog/:name/'
 
 # Assets
 #
