--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ permalink: /blog/:categories/:year/:month/:day/:title
 
 # Build settings
 markdown: kramdown
+lsi: true
 # theme: minima
 plugins:  
   - jekyll-feed
