--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,12 @@ pagination:
     
 jekyll-archives:
   enabled: all
-  layout: archive
+  layouts:
+    year: year-archive
+    month: month-archive
+    day: day-archive
+    category: category-archive
+    tag: tag-archive
   permalinks:
     year: '/blog/:year/'
     month: '/blog/:year/:month/'
