--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ pagination:
     enabled: true
     per_page: 10
     sort_reverse: true
-    permalink: '/blog/page/:num/'
+    permalink: '/page/:num/'
     
 jekyll-archives:
   enabled: all
