--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ pagination:
     per_page: 10
     sort_reverse: true
     permalink: '/page/:num/'
+    title: ':title'
     
 jekyll-archives:
   enabled: all
