--- a/_config.yml
+++ b/_config.yml
@@ -29,16 +29,16 @@ markdown: kramdown
 # theme: minima
 plugins:  
   - jekyll-feed
-  - jekyll-paginate-v2
+#  - jekyll-paginate-v2
   - jekyll-gist
   - jekyll-archives
 
-pagination: 
-    enabled: true
-    per_page: 10
-    sort_reverse: true
-    permalink: '/page/:num/'
-    title: ':title'
+#pagination: 
+#    enabled: true
+#    per_page: 10
+#    sort_reverse: true
+#    permalink: '/page/:num/'
+#    title: ':title'
     
 jekyll-archives:
   enabled: all
