--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ plugins:
   - jekyll-paginate-v2
   - jekyll-gist
   - jekyll-archives
+  - jeykll-redirect-from
 
 pagination: 
     enabled: true
