--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ plugins:
   - jekyll-paginate-v2
   - jekyll-gist
   - jekyll-archives
-  - jeykll-redirect-from
+  - jekyll-redirect-from
 
 pagination: 
     enabled: true
