--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ permalink: /blog/:categories/:title
 # Build settings
 markdown: kramdown
 incremental: true
+timezone: Australia/Adelaide
 # theme: minima
 plugins:  
   - jekyll-feed
