--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: ruby
 rvm:
   - 2.1
 install: gem install jekyll && gem install s3_website
-script: jekyll build
+script: bundle exec jekyll build
 after_success: s3_website push
