--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
   - 2.1
-install: gem install jekyll && gem install s3_website
+install: 
+  - bundle install
+  - gem install jekyll
+  - gem install s3_website
 script: bundle exec jekyll build
 after_success: s3_website push
