--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ language: ruby
 rvm:
   - 2.6.3
 script: bundle exec jekyll build
-after_success: s3_website push
+deploy:
+  provider: s3
+  access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['S3_SECRET_KEY'] %>
+  bucket: "jden.me"
+  endpoint: https://sos-ch-dk-2.exo.io
