--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: ruby
 rvm:
   - 2.6.3
+cache: bundler
 script: bundle exec jekyll build
 deploy:
   provider: s3
-  access_key_id: S3_ACCESS_KEY_ID
-  secret_access_key: S3_SECRET_KEY
+  access_key_id: EXO0121b3275df2939cd372956d
+  secret_access_key: uGTRmHHzxq0kRoKUq5MWa5jGQUpOMjZOeIYZwrbHoPI
   bucket: "jden-me"
   endpoint: https://sos-ch-dk-2.exo.io
   on:
