--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 2.6.3
 cache: bundler
-install: gem install s3_website
+#install: gem install s3_website
 script: bundle exec jekyll build
 after_success: s3_website push
 #deploy:
