--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,3 +1,3 @@
-s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
-s3_secret: <%= ENV['S3_SECRET_KEY'] %>
+s3_id: EXO0121b3275df2939cd372956d
+s3_secret: uGTRmHHzxq0kRoKUq5MWa5jGQUpOMjZOeIYZwrbHoPI
 s3_bucket: jden-me
