--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,26 @@ language: ruby
 rvm:
   - 2.6.3
 cache: bundler
-#install: 
-#  - bundle install
-#  - gem install s3_website
-#  - gem install jekyll
 script: bundle exec jekyll build
-after_success: s3_website push
+#deploy:
+#  provider: s3
+#  skip_cleanup: true
+#  access_key_id: $S3_ACCESS_KEY_ID
+#  secret_access_key: $S3_SECRET_KEY
+#  bucket: "jden-me"
+#  local_dir: _site
+#  endpoint: https://sos-ch-dk-2.exo.io
+#  acl: public_read
+#  on:
+#    branch: poole
 deploy:
   provider: s3
   skip_cleanup: true
-  access_key_id: $S3_ACCESS_KEY_ID
-  secret_access_key: $S3_SECRET_KEY
+  access_key_id: ab591d88700441028540b470a930f6fc
+  secret_access_key: be6732abe63548d18bf3b640132359ff
   bucket: "jden-me"
   local_dir: _site
-  endpoint: https://sos-ch-dk-2.exo.io
+  endpoint: https://object.api.ams.fuga.cloud/c1c475de906440a8983a054424f5803d
   acl: public_read
   on:
     branch: poole
