--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ deploy:
   bucket: "jden-me"
   local_dir: _site
   endpoint: https://storage.sbg.cloud.ovh.net
+  region: sbg
   acl: public_read
   on:
     branch: poole
