--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baseurl: /blog # the subpath of your site, e.g. /blog
 url: https://jden.me # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jden
 github_username:  JDENredden
-permalink: /blog/:categories/:title/
+permalink: /blog/:categories/:title
 
 # Build settings
 markdown: kramdown
