--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,17 @@ rvm:
   - 2.6.3
 cache: bundler
 script: bundle exec jekyll build
-#deploy:
-#  provider: s3
-#  skip_cleanup: true
-#  access_key_id: $S3_ACCESS_KEY_ID
-#  secret_access_key: $S3_SECRET_KEY
-#  bucket: "jden-me"
-#  local_dir: _site
-#  endpoint: https://sos-ch-dk-2.exo.io
-#  acl: public_read
-#  on:
-#    branch: poole
+deploy:
+  provider: s3
+  skip_cleanup: true
+  access_key_id: $S3_ACCESS_KEY_ID
+  secret_access_key: $S3_SECRET_KEY
+  bucket: "jden-me"
+  local_dir: _site
+  endpoint: https://sos-ch-dk-2.exo.io
+  acl: public_read
+  on:
+    branch: poole
 #deploy:
 #  provider: s3
 #  skip_cleanup: true
@@ -25,15 +25,15 @@ script: bundle exec jekyll build
 #  acl: public_read
 #  on:
 #    branch: poole
-deploy:
-  provider: s3
-  skip_cleanup: true
-  access_key_id: "c0a741e841784b0d818d0f3d3d5416a9"
-  secret_access_key: "05c173b90f5e4720a4abc6aeb9e88f2d"
-  bucket: "jden"
-  local_dir: _site
-  endpoint: https://s3.sbg.cloud.ovh.net
-  region: "sbg"
-  acl: public_read
-  on:
-    branch: poole
+#deploy:
+#  provider: s3
+#  skip_cleanup: true
+#  access_key_id: "c0a741e841784b0d818d0f3d3d5416a9"
+#  secret_access_key: "05c173b90f5e4720a4abc6aeb9e88f2d"
+#  bucket: "jden"
+#  local_dir: _site
+#  endpoint: https://s3.sbg.cloud.ovh.net
+#  region: "sbg"
+#  acl: public_read
+#  on:
+#    branch: poole
