--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,22 @@ language: ruby
 rvm:
   - 2.6.3
 cache: bundler
-script: bundle exec jekyll build
+script: bundle exec jekyll build --incremental
+before_deploy: pip install --user awscli
 deploy:
-  provider: s3
-  skip_cleanup: true
-  access_key_id: $S3_ACCESS_KEY_ID
-  secret_access_key: $S3_SECRET_KEY
-  bucket: "jden-me"
-  local_dir: _site
-  endpoint: https://sos-ch-dk-2.exo.io
-  acl: public_read
-  on:
-    branch: poole
+  provider: script
+  script: ~/.local/bin/aws s3 sync dist --acl public-read --delete --size-only s3://sos-ch-dk-2.exo.io
+#deploy:
+#  provider: s3
+#  skip_cleanup: true
+#  access_key_id: $S3_ACCESS_KEY_ID
+#  secret_access_key: $S3_SECRET_KEY
+#  bucket: "jden-me"
+#  local_dir: _site
+#  endpoint: https://sos-ch-dk-2.exo.io
+#  acl: public_read
+#  on:
+#    branch: poole
 #deploy:
 #  provider: s3
 #  skip_cleanup: true
