--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_deploy: pip install --user awscli
 deploy:
   provider: script
   script: ~/.local/bin/aws s3 sync dist --acl public-read --delete --size-only s3://sos-ch-dk-2.exo.io
+  on:
+    branch: poole
 #deploy:
 #  provider: s3
 #  skip_cleanup: true
