--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ script: bundle exec jekyll build --incremental
 before_deploy: pip install --user awscli
 deploy:
   provider: script
-  script: ~/.local/bin/aws s3 sync dist --acl public-read --delete --size-only s3://sos-ch-dk-2.exo.io --region=ch-dk-2
+  skip_cleanup: true
+  script: ~/.local/bin/aws s3 sync dist --acl public-read --delete --size-only . s3://sos-ch-dk-2.exo.io --region=ch-dk-2
   on:
     branch: poole
 #deploy:
