--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
   - 2.6.3
 cache: bundler
+before_install:
+  - sudo apt-get -y install libgsl-dev
 script: bundle exec jekyll build --incremental
 before_deploy: pip install --user awscli
 deploy:
