--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ permalink: /blog/:categories/:title/
 
 # Build settings
 markdown: kramdown
-lsi: true
+#lsi: true
 #incremental: true
 timezone: Australia/Adelaide
 # theme: minima
