--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,14 @@ deploy:
   script: ~/.local/bin/aws s3 sync --endpoint-url https://sos-ch-dk-2.exo.io --acl public-read --delete --size-only _site s3://jden-me --region=ch-dk-2
   on:
     branch: poole
-after_deploy: 
-  - curl --include \
-                        --request POST \
-                        --header "Content-Type: application/xml" \
-                        --header "Accept: application/json" \
-                        --header "AccessKey: 3aa7bf31-dd7e-41fa-9c99-c1198e7cf332c9e030b0-ed6c-4e18-bf92-323f64103c96" \
-                        --header "Content-Length: 0" \
-                     'https://bunnycdn.com/api/pullzone/132574/purgeCache'
+#after_deploy: 
+#  - curl --include \
+#                        --request POST \
+#                        --header "Content-Type: application/xml" \
+#                        --header "Accept: application/json" \
+#                        --header "AccessKey: 3aa7bf31-dd7e-41fa-9c99-c1198e7cf332c9e030b0-ed6c-4e18-bf92-323f64103c96" \
+#                        --header "Content-Length: 0" \
+#                     'https://bunnycdn.com/api/pullzone/132574/purgeCache'
 #deploy:
 #  provider: s3
 #  skip_cleanup: true
