--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ deploy:
   script: ~/.local/bin/aws s3 sync --endpoint-url https://sos-ch-dk-2.exo.io --acl public-read --delete --size-only _site s3://jden-me --region=ch-dk-2
   on:
     branch: poole
-#after_deploy: 
+after_deploy: 
+  script: bash bunnyCDN.sh
 #  - curl --include \
 #                        --request POST \
 #                        --header "Content-Type: application/xml" \
